--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <div class="piano">
         <div data-note="C" class="key white"></div>
-        <div data-note="Db" class="key black"></div>
+        <div data-note="Db" data-note-sharp="C&#9839;" class="key black"></div>
         <div data-note="D" class="key white"></div>
-        <div data-note="Eb" class="key black"></div>
+        <div data-note="Eb" data-note-sharp="D&#9839;" class="key black"></div>
         <div data-note="E" class="key white"></div>
         <div data-note="F" class="key white"></div>
-        <div data-note="Gb" class="key black"></div>
+        <div data-note="Gb" data-note-sharp="F&#9839;" class="key black"></div>
         <div data-note="G" class="key white"></div>
-        <div data-note="Ab" class="key black"></div>
+        <div data-note="Ab" data-note-sharp="G&#9839;" class="key black"></div>
         <div data-note="A" class="key white"></div>
-        <div data-note="Bb" class="key black"></div>
+        <div data-note="Bb" data-note-sharp="A&#9839;" class="key black"></div>
         <div data-note="B" class="key white"></div>
     </div>
 </body>
