--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="script.js"></script>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
     <title>MIDI Piano 🎹</title>
-  </head>
-  <body>
+</head>
+<body>
     <div class="piano">
-      <div data-note="C" class="key white"></div>
-      <div data-note="Db" data-note-sharp="C&#9839;" class="key black"></div>
-      <div data-note="D" class="key white"></div>
-      <div data-note="Eb" data-note-sharp="D&#9839;" class="key black"></div>
-      <div data-note="E" class="key white"></div>
-      <div data-note="F" class="key white"></div>
-      <div data-note="Gb" data-note-sharp="F&#9839;" class="key black"></div>
-      <div data-note="G" class="key white"></div>
-      <div data-note="Ab" data-note-sharp="G&#9839;" class="key black"></div>
-      <div data-note="A" class="key white"></div>
-      <div data-note="Bb" data-note-sharp="A&#9839;" class="key black"></div>
-      <div data-note="B" class="key white"></div>
+        <div data-note="C" class="key white"></div>
+        <div data-note="Db" data-note-sharp="C&#9839;" class="key black"></div>
+        <div data-note="D" class="key white"></div>
+        <div data-note="Eb" data-note-sharp="D&#9839;" class="key black"></div>
+        <div data-note="E" class="key white"></div>
+        <div data-note="F" class="key white"></div>
+        <div data-note="Gb" data-note-sharp="F&#9839;" class="key black"></div>
+        <div data-note="G" class="key white"></div>
+        <div data-note="Ab" data-note-sharp="G&#9839;" class="key black"></div>
+        <div data-note="A" class="key white"></div>
+        <div data-note="Bb" data-note-sharp="A&#9839;" class="key black"></div>
+        <div data-note="B" class="key white"></div>
     </div>
-  </body>
+</body>
 </html>
