--- a/index.html
+++ b/index.html
@@ -22,5 +22,59 @@
         <div data-note="Bb" data-note-sharp="A&#9839;" class="key black"></div>
         <div data-note="B" class="key white"></div>
     </div>
+    <div class="keyboard-key-map">
+        <div class="upper-keys">
+            <div class="key-note-card">
+                <h2>C&#9839; Db</h2>
+                <img src="images/keyboard-keys/s-key.png" alt="S key">
+            </div>
+            <div class="key-note-card">
+                <h2>D&#9839; Eb</h2>
+                <img src="images/keyboard-keys/d-key.png" alt="D key">
+            </div>
+            <div class="key-note-card">
+                <h2>F&#9839; Gb</h2>
+                <img src="images/keyboard-keys/g-key.png" alt="G key">
+            </div>
+            <div class="key-note-card">
+                <h2>G&#9839; Ab</h2>
+                <img src="images/keyboard-keys/h-key.png" alt="H key">
+            </div>
+            <div class="key-note-card">
+                <h2>A&#9839; Bb</h2>
+                <img src="images/keyboard-keys/j-key.png" alt="J key">
+            </div>
+        </div>
+        <div class="lower-keys">
+            <div class="key-note-card">
+                <h2>C</h2>
+                <img src="images/keyboard-keys/z-key.png" alt="Z key">
+            </div>
+            <div class="key-note-card">
+                <h2>D</h2>
+                <img src="images/keyboard-keys/x-key.png" alt="X key">
+            </div>
+            <div class="key-note-card">
+                <h2>E</h2>
+                <img src="images/keyboard-keys/c-key.png" alt="C key">
+            </div>
+            <div class="key-note-card">
+                <h2>F</h2>
+                <img src="images/keyboard-keys/v-key.png" alt="V key">
+            </div>
+            <div class="key-note-card">
+                <h2>G</h2>
+                <img src="images/keyboard-keys/b-key.png" alt="B key">
+            </div>
+            <div class="key-note-card">
+                <h2>A</h2>
+                <img src="images/keyboard-keys/n-key.png" alt="N key">
+            </div>
+            <div class="key-note-card">
+                <h2>B</h2>
+                <img src="images/keyboard-keys/m-key.png" alt="M key">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
