--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>MIDI Piano 🎹</title>
   </head>
-  <body>
+  <body class="centered-flex flex-column">
     <div class="piano">
       <div data-note="C" class="key white"></div>
       <div data-note="Db" data-note-sharp="C&#9839;" class="key black"></div>
@@ -25,56 +25,56 @@
     <div class="keyboard-key-map centered-flex flex-column">
       <div class="upper-keys centered-flex">
         <div class="upper-keys-left centered-flex">
-          <div class="key-note-card centered-flex flex-column s-key">
+          <div data-note="Db" class="key-note-card centered-flex flex-column desaturated">
             <h2>C&#9839; Db</h2>
             <img src="images/keyboard-keys/s-key.png" alt="S key" />
           </div>
-          <div class="key-note-card centered-flex flex-column d-key">
+          <div data-note="Eb" class="key-note-card centered-flex flex-column desaturated">
             <h2>D&#9839; Eb</h2>
             <img src="images/keyboard-keys/d-key.png" alt="D key" />
           </div>
         </div>
         <div class="upper-keys-right centered-flex">
-          <div class="key-note-card centered-flex flex-column g-key">
+          <div data-note="Gb" class="key-note-card centered-flex flex-column desaturated">
             <h2>F&#9839; Gb</h2>
             <img src="images/keyboard-keys/g-key.png" alt="G key" />
           </div>
-          <div class="key-note-card centered-flex flex-column h-key">
+          <div data-note="Ab" class="key-note-card centered-flex flex-column desaturated">
             <h2>G&#9839; Ab</h2>
             <img src="images/keyboard-keys/h-key.png" alt="H key" />
           </div>
-          <div class="key-note-card centered-flex flex-column j-key">
+          <div  data-note="Bb"class="key-note-card centered-flex flex-column desaturated">
             <h2>A&#9839; Bb</h2>
             <img src="images/keyboard-keys/j-key.png" alt="J key" />
           </div>
         </div>
       </div>
       <div class="lower-keys centered-flex">
-        <div class="key-note-card centered-flex flex-column z-key">
+        <div data-note="C" class="key-note-card centered-flex flex-column">
           <h2>C</h2>
           <img src="images/keyboard-keys/z-key.png" alt="Z key" />
         </div>
-        <div class="key-note-card centered-flex flex-column x-key">
+        <div data-note="D" class="key-note-card centered-flex flex-column">
           <h2>D</h2>
           <img src="images/keyboard-keys/x-key.png" alt="X key" />
         </div>
-        <div class="key-note-card centered-flex flex-column c-key">
+        <div data-note="E" class="key-note-card centered-flex flex-column">
           <h2>E</h2>
           <img src="images/keyboard-keys/c-key.png" alt="C key" />
         </div>
-        <div class="key-note-card centered-flex flex-column v-key">
+        <div data-note="F" class="key-note-card centered-flex flex-column">
           <h2>F</h2>
           <img src="images/keyboard-keys/v-key.png" alt="V key" />
         </div>
-        <div class="key-note-card centered-flex flex-column b-key">
+        <div data-note="G" class="key-note-card centered-flex flex-column">
           <h2>G</h2>
           <img src="images/keyboard-keys/b-key.png" alt="B key" />
         </div>
-        <div class="key-note-card centered-flex flex-column n-key">
+        <div data-note="A" class="key-note-card centered-flex flex-column">
           <h2>A</h2>
           <img src="images/keyboard-keys/n-key.png" alt="N key" />
         </div>
-        <div class="key-note-card centered-flex flex-column m-key">
+        <div data-note="B" class="key-note-card centered-flex flex-column">
           <h2>B</h2>
           <img src="images/keyboard-keys/m-key.png" alt="M key" />
         </div>
