Making the app work on touch screens

--- a/index.html
+++ b/index.html
@@ -46,56 +46,56 @@
         <div class="upper-keys-left centered-flex">
           <div data-note="Db" class="key-note-card centered-flex flex-column desaturated">
             <h2>C&#9839;<br>Db</h2>
-            <img src="images/keyboard-keys/s-key.png" alt="S key" />
+            <img data-key="S" src="images/keyboard-keys/s-key.png" alt="S key" />
           </div>
           <div data-note="Eb" class="key-note-card centered-flex flex-column desaturated">
             <h2>D&#9839;<br>Eb</h2>
-            <img src="images/keyboard-keys/d-key.png" alt="D key" />
+            <img data-key="D" src="images/keyboard-keys/d-key.png" alt="D key" />
           </div>
         </div>
         <div class="upper-keys-right centered-flex">
           <div data-note="Gb" class="key-note-card centered-flex flex-column desaturated">
             <h2>F&#9839;<br>Gb</h2>
-            <img src="images/keyboard-keys/g-key.png" alt="G key" />
+            <img data-key="G" src="images/keyboard-keys/g-key.png" alt="G key" />
           </div>
           <div data-note="Ab" class="key-note-card centered-flex flex-column desaturated">
             <h2>G&#9839;<br>Ab</h2>
-            <img src="images/keyboard-keys/h-key.png" alt="H key" />
+            <img data-key="H" src="images/keyboard-keys/h-key.png" alt="H key" />
           </div>
-          <div  data-note="Bb"class="key-note-card centered-flex flex-column desaturated">
+          <div data-note="Bb" class="key-note-card centered-flex flex-column desaturated">
             <h2>A&#9839;<br>Bb</h2>
-            <img src="images/keyboard-keys/j-key.png" alt="J key" />
+            <img data-key="J" src="images/keyboard-keys/j-key.png" alt="J key" />
           </div>
         </div>
       </div>
       <div class="lower-keys centered-flex">
         <div data-note="C" class="key-note-card centered-flex flex-column">
           <h2>C</h2>
-          <img src="images/keyboard-keys/z-key.png" alt="Z key" />
+          <img data-key="Z" src="images/keyboard-keys/z-key.png" alt="Z key" />
         </div>
         <div data-note="D" class="key-note-card centered-flex flex-column">
           <h2>D</h2>
-          <img src="images/keyboard-keys/x-key.png" alt="X key" />
+          <img data-key="X" src="images/keyboard-keys/x-key.png" alt="X key" />
         </div>
         <div data-note="E" class="key-note-card centered-flex flex-column">
           <h2>E</h2>
-          <img src="images/keyboard-keys/c-key.png" alt="C key" />
+          <img data-key="C" src="images/keyboard-keys/c-key.png" alt="C key" />
         </div>
         <div data-note="F" class="key-note-card centered-flex flex-column">
           <h2>F</h2>
-          <img src="images/keyboard-keys/v-key.png" alt="V key" />
+          <img data-key="V" src="images/keyboard-keys/v-key.png" alt="V key" />
         </div>
         <div data-note="G" class="key-note-card centered-flex flex-column">
           <h2>G</h2>
-          <img src="images/keyboard-keys/b-key.png" alt="B key" />
+          <img data-key="B" src="images/keyboard-keys/b-key.png" alt="B key" />
         </div>
         <div data-note="A" class="key-note-card centered-flex flex-column">
           <h2>A</h2>
-          <img src="images/keyboard-keys/n-key.png" alt="N key" />
+          <img data-key="N" src="images/keyboard-keys/n-key.png" alt="N key" />
         </div>
         <div data-note="B" class="key-note-card centered-flex flex-column">
           <h2>B</h2>
-          <img src="images/keyboard-keys/m-key.png" alt="M key" />
+          <img data-key="M" src="images/keyboard-keys/m-key.png" alt="M key" />
         </div>
       </div>
     </div>
