--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
   </head>
   <body class="centered-flex flex-column">
     <div class="piano">
-      <div data-note="C" class="key white"></div>
-      <div data-note="Db" data-note-sharp="C&#9839;" class="key black"></div>
-      <div data-note="D" class="key white"></div>
-      <div data-note="Eb" data-note-sharp="D&#9839;" class="key black"></div>
-      <div data-note="E" class="key white"></div>
-      <div data-note="F" class="key white"></div>
-      <div data-note="Gb" data-note-sharp="F&#9839;" class="key black"></div>
-      <div data-note="G" class="key white"></div>
-      <div data-note="Ab" data-note-sharp="G&#9839;" class="key black"></div>
-      <div data-note="A" class="key white"></div>
-      <div data-note="Bb" data-note-sharp="A&#9839;" class="key black"></div>
-      <div data-note="B" class="key white"></div>
+      <div data-note="C" data-key="Z" class="key white"></div>
+      <div data-note="Db" data-note-sharp="C&#9839;" data-key="S" class="key black"></div>
+      <div data-note="D" data-key="X" class="key white"></div>
+      <div data-note="Eb" data-note-sharp="D&#9839;" data-key="D" class="key black"></div>
+      <div data-note="E" data-key="C" class="key white"></div>
+      <div data-note="F" data-key="V" class="key white"></div>
+      <div data-note="Gb" data-note-sharp="F&#9839;" data-key="G" class="key black"></div>
+      <div data-note="G" data-key="B" class="key white"></div>
+      <div data-note="Ab" data-note-sharp="G&#9839;" data-key="H" class="key black"></div>
+      <div data-note="A" data-key="N" class="key white"></div>
+      <div data-note="Bb" data-note-sharp="A&#9839;" data-key="J" class="key black"></div>
+      <div data-note="B" data-key="M" class="key white"></div>
     </div>
     <div class="keyboard-key-map centered-flex flex-column">
       <div class="upper-keys centered-flex">
